--- a/src/pages/detailRecipe.css
+++ b/src/pages/detailRecipe.css
@@ -50,6 +50,12 @@
   text-transform: capitalize;
   color: #3f3a3a;
 }
+.btn-video {
+  width: 200px;
+  height: 44px;
+  color: #e5e5e5;
+  margin-top: 10px;
+}
 
 .footer {
   height: 50vh;
