--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -3,3 +3,20 @@
   height: 172px;
   border-radius: 50%;
 }
+
+.card-my-recipe {
+  height: 170px;
+  width: 250px;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  border-radius: 15px !important;
+  transition: transform 0.2s;
+}
+
+.img-my-recipe {
+  display: block;
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+}
