--- a/src/pages/detailRecipe/DetailRecipe.css
+++ b/src/pages/detailRecipe/DetailRecipe.css
@@ -15,9 +15,12 @@
 
 .img-user-comment {
   border-radius: 50%;
-  width: 80px;
+  width: 50px;
+  height: 50px;
 }
 
 .user-name-comment {
   font-weight: bolder;
+  margin-bottom: 0px;
 }
+
